--- a/css/inicio.css
+++ b/css/inicio.css
@@ -83,8 +83,8 @@
   text-align: center;
   color: #49e149;
   background-image: url(../imagenes-proyecto/usuario3.webp);
-  background-size: 100%;
-  background-position-y: 53%;
+  background-size: cover;
+  background-position: center;
 }
 .titlep #villa {
   color: rgb(226, 226, 226);
@@ -107,9 +107,9 @@
 /* follow */
 .pie {
   background-image: url(../imagenes-proyecto/ola.svg);
-  background-size: 100%;
-  background-position-y: 43%;
-  background-repeat: none;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .social {
@@ -392,6 +392,8 @@
     justify-content: center;
   }
   .titlep {
+    background-size: cover;
+    background-position: center;
     font-size: 2rem;
     margin: 0;
     text-align: center;
