--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -27,6 +27,8 @@
         }
     }
     .titlep{
+        background-size: cover;
+        background-position: center;
         font-size: 2rem;
         margin:0;
         text-align: center;
