--- a/css/inicio.css
+++ b/css/inicio.css
@@ -5,12 +5,17 @@
   box-sizing: border-box;
 }
 
-.container {
+.container-fluid {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
   display: grid;
   grid-template-columns: 1, 1fr;
   grid-template-rows: repeat(3, auto);
   grid-template-areas: "header" "principal" "pie";
   width: 100%;
+}
+
+.container2 {
   background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea, #ebeaea);
 }
 
@@ -57,7 +62,8 @@
   display: flex;
   align-items: center;
 }
-.div-logo .logo {
+
+.logo {
   width: 3rem;
   margin: 0.1rem;
 }
@@ -110,6 +116,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 9rem;
 }
 
 .social {
@@ -275,6 +282,7 @@
   width: 90%;
   margin: auto;
   margin-bottom: 0.5rem;
+  padding-bottom: 2rem;
   background-color: #a962c7;
   color: #fff;
   cursor: pointer;
@@ -364,10 +372,15 @@
 }
 
 @media screen and (max-width: 768px) {
-  .container {
+  .container-fluid {
+    --bs-gutter-x: 0;
     grid-column: 1, 1fr;
     grid-row: 3, 1fr;
     background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea, #ebeaea);
+  }
+  .navbar {
+    --bs-navbar-padding-x: -1;
+    --bs-navbar-padding-y: 0;
   }
   .cabecera {
     width: 100%;
@@ -409,15 +422,23 @@
     background-size: cover;
     background-position: center;
   }
+  .formulario .boton {
+    padding-bottom: 2rem;
+  }
   .pie {
-    height: 8rem;
+    height: 10rem;
   }
 }
 @media screen and (max-width: 385px) {
-  .container {
+  .container-fluid {
+    --bs-gutter-x: 0;
     grid-column: 1, 1fr;
     grid-row: 3, 1fr;
     background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea, #ebeaea);
+  }
+  .navbar {
+    --bs-navbar-padding-x: -1;
+    --bs-navbar-padding-y: 0;
   }
   .cabecera {
     width: 100%;
@@ -468,8 +489,12 @@
     background-size: cover;
     background-position: center;
   }
+  .formulario .boton {
+    padding-bottom: 2rem;
+  }
   .pie {
-    height: 8rem;
+    width: 110vw;
+    height: 10rem;
   }
 }
 
