--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,7 +5,9 @@
 }
 @import "variable";
 
-.container{
+.container-fluid{
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
     display: grid;
     grid-template-columns: 1, 1fr;
     grid-template-rows: repeat(3, auto);
@@ -13,6 +15,8 @@
                         "principal"
                         "pie";
     width: map-get($map: $anchos, $key: completo );
+}
+.container2{
     background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea,#ebeaea);
 }
 
@@ -57,10 +61,10 @@
 .div-logo{
     display: flex;
     align-items: center;
-    .logo{
-        width: 3rem;
-        margin: 0.1rem;
-    }
+}
+.logo{
+    width: 3rem;
+    margin: 0.1rem;
 }
 
 .container1{
@@ -113,6 +117,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    height: 9rem;
 }
 .social {
     margin: 50px;
