--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,8 +1,13 @@
 @media screen and (max-width: $mobile) {
-    .container{
+    .container-fluid{
+        --bs-gutter-x: 0;
         grid-column: 1, 1fr;
         grid-row: 3, 1fr;
         background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea,#ebeaea);
+    }
+    .navbar{
+        --bs-navbar-padding-x: -1;
+        --bs-navbar-padding-y: 0;
     }
     .cabecera {
         width: 100%;
@@ -43,17 +48,25 @@
     .formulario{
         background-size: cover;
         background-position: center;
+        .boton{
+            padding-bottom: 2rem;
+        }
     }
     .pie{
-        height: 8rem;
+        height: 10rem;
     }
 }
 
 @media screen and (max-width: 385px) {
-    .container{
+    .container-fluid{
+        --bs-gutter-x: 0;
         grid-column: 1, 1fr;
         grid-row: 3, 1fr;
         background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea,#ebeaea);
+    }
+    .navbar{
+        --bs-navbar-padding-x: -1;
+        --bs-navbar-padding-y: 0;
     }
     .cabecera {
         width: 100%;
@@ -104,10 +117,14 @@
     .formulario{
         background-size: cover;
         background-position: center;
+        .boton{
+            padding-bottom: 2rem;
+        }
     }
 
 
     .pie{
-        height: 8rem;
+        width: 110vw;
+        height: 10rem;
     }
 }
