--- a/scss/_secundarios.scss
+++ b/scss/_secundarios.scss
@@ -80,6 +80,7 @@
         width: 90%;
         margin: auto;
         margin-bottom: .5rem;
+        padding-bottom: 2rem;
         background-color: #a962c7;
         color: #fff;
         cursor: pointer;
