--- a/scss/_secundarios.scss
+++ b/scss/_secundarios.scss
@@ -3,6 +3,10 @@
 .principal2{
     border-top: 1px solid map-get($map: $colores, $key: cprimario);
 }
+.container-flui{
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+}
 .titlec{
     display: flex;
     justify-content: center;
