--- a/css/inicio.css
+++ b/css/inicio.css
@@ -288,7 +288,7 @@
   margin: auto;
   margin-bottom: 0.5rem;
   padding-bottom: 2rem;
-  background-color: #a962c7;
+  background-color: rgb(71, 158, 83);
   color: #fff;
   cursor: pointer;
 }
