--- a/scss/_secundarios.scss
+++ b/scss/_secundarios.scss
@@ -85,7 +85,7 @@
         margin: auto;
         margin-bottom: .5rem;
         padding-bottom: 2rem;
-        background-color: #a962c7;
+        background-color: map-get($map: $colores, $key: iconos);
         color: #fff;
         cursor: pointer;
     }   
