--- a/css/inicio.css
+++ b/css/inicio.css
@@ -25,39 +25,6 @@
   top: 0;
 }
 
-.cabecera {
-  width: 100%;
-  grid-area: cabecera;
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem;
-  background-color: rgb(232, 223, 223);
-}
-.cabecera .list-nav {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-.cabecera .list-nav .list {
-  margin: 0.34rem;
-  padding: 0.3rem;
-  font-size: 1rem;
-  font-family: "Trebuchet MS", Arial, sans-serif;
-}
-.cabecera .list-nav .list:hover {
-  background-color: rgb(93, 176, 93);
-  transition: background-color 0.6s;
-  border-radius: 0.5rem;
-}
-.cabecera .list-nav .list a {
-  text-decoration: none;
-  color: rgb(108, 106, 106);
-  font-size: 1.25rem;
-  margin: 0.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  text-decoration: none;
-}
-
 .div-logo {
   display: flex;
   align-items: center;
@@ -200,11 +167,7 @@
   border-top: 1px solid #49e149;
 }
 
-.container-flui {
-  --bs-gutter-x: 0;
-  --bs-gutter-y: 0;
-}
-
+/* Títulos y backgorund */
 .titlec {
   display: flex;
   justify-content: center;
@@ -237,6 +200,7 @@
   background-size: cover;
 }
 
+/* Modificaciones sección Contacto*/
 .formulario {
   background-image: url(../imagenes-proyecto/form2.jpg);
   background-size: cover;
@@ -383,29 +347,12 @@
     grid-row: 3, 1fr;
     background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea, #ebeaea);
   }
-  .navbar {
-    --bs-navbar-padding-x: -1;
-    --bs-navbar-padding-y: 0;
-  }
-  .cabecera {
-    width: 100%;
-    grid-area: cabecera;
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    padding: 0.5rem;
-    background-color: rgb(232, 223, 223);
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-  }
-  .cabecera .div-logo {
+  .div-logo {
     display: flex;
     align-items: center;
     flex-direction: column;
   }
-  .cabecera .menu-listas {
+  .menu-listas {
     display: flex;
     justify-content: center;
   }
@@ -440,43 +387,6 @@
     grid-column: 1, 1fr;
     grid-row: 3, 1fr;
     background-image: linear-gradient(#ebeaea, #ebeaea, #e4e2e2, #dedada, #ebeaea, #ebeaea);
-  }
-  .navbar {
-    --bs-navbar-padding-x: -1;
-    --bs-navbar-padding-y: 0;
-  }
-  .cabecera {
-    width: 100%;
-    grid-area: cabecera;
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    padding: 0.5rem;
-    background-color: rgb(232, 223, 223);
-    flex-direction: column;
-  }
-  .cabecera .div-logo {
-    display: flex;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-  .cabecera .menu-listas {
-    display: flex;
-    flex-direction: row;
-  }
-  .cabecera .list-nav {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    flex-direction: row;
-  }
-  .cabecera .list {
-    margin: 0;
-  }
-  .cabecera .list a {
-    font-size: 0.7rem;
-    color: rgb(108, 106, 106);
   }
   .titlec {
     width: 100%;
